--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,18 +19,18 @@ jobs:
     - name: Build
       run: cargo build --release
     
-    # - uses: dtolnay/rust-toolchain@stable
-    #   with:
-    #     components: llvm-tools-preview
-    # - uses: taiki-e/install-action@cargo-llvm-cov
-    # - uses: taiki-e/install-action@nextest
+    - uses: dtolnay/rust-toolchain@stable
+      with:
+        components: llvm-tools-preview
+    - uses: taiki-e/install-action@cargo-llvm-cov
+    - uses: taiki-e/install-action@nextest
 
-    # - name: Collect coverage data
-    #   run: cargo llvm-cov nextest --lcov --output-path lcov.info
+    - name: Collect coverage data
+      run: cargo llvm-cov nextest --lcov --output-path lcov.info
 
-    # - name: Upload coverage to Codecov
-    #   uses: codecov/codecov-action@v3
-    #   with:
-    #     token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-    #     files: lcov.info
-    #     fail_ci_if_error: true
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: lcov.info
+        fail_ci_if_error: true
