--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "nss_core"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.65"
+rust-version = "1.69"
 authors = ["noshishi"]
 readme = "README.md"
 
@@ -11,6 +11,7 @@ github = { repository = "nopeNoshishi/nss", workflow = "Rust" }
 
 [dependencies]
 anyhow = "1"
+thiserror = "1"
 bincode = "1.3.3"
 byteorder = "1.4.3"
 colored = "2"
